microservices/kube/artemis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: artemis
  name: artemis
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: artemis
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.service: artemis
    spec:
      containers:
        - env:
            - name: AMQ_EXTRA_ARGS
              value: --relax-jolokia
            - name: AMQ_PASSWORD
              value: quarkus
            - name: AMQ_USER
              value: quarkus
          image: quay.io/artemiscloud/activemq-artemis-broker:1.0.1
          name: artemis
          ports:
            - containerPort: 61616
            - containerPort: 5672
            - containerPort: 8161
          resources: {}
      restartPolicy: Always
status: {}
