microservices/kube/artemis-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.service.group: ia
    kompose.service.type: NodePort
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: artemis
  name: artemis
spec:
  ports:
    - name: "61616"
      port: 61616
      targetPort: 61616
    - name: "5672"
      port: 5672
      targetPort: 5672
    - name: "8161"
      port: 8161
      targetPort: 8161
  selector:
    io.kompose.service: artemis
  type: NodePort
status:
  loadBalancer: {}
