microservices/kube/authentication-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.service.group: ia
    kompose.service.type: NodePort
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: authentication
  name: authentication
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: authentication
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.service.group: ia
        kompose.service.type: NodePort
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.service: authentication
    spec:
      containers:
        - env:
            - name: JWT_SECRET
              value: wsdefrgthzjkkjhzgtfr
            - name: MONGO_IP
              value: mongo
            - name: MONGO_PASS
              value: quarkus
            - name: MONGO_PORT
              value: "27017"
            - name: MONGO_USER
              value: quarkus
            - name: RABBIT_URL
              value: amqp://guest:guest@rabbitmq:5672/
          image: registry.gitlab.com/domenlum/sua-microservices/authentication
          name: authentication
          ports:
            - containerPort: 8002
          resources: {}
      restartPolicy: Always
status: {}
