microservices/kube/front-end-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.service.group: ia
    kompose.service.type: LoadBalancer
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: front-end
  name: front-end
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: front-end
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.service.group: ia
        kompose.service.type: LoadBalancer
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.service: front-end
    spec:
      containers:
        - image: ghcr.io/kukovecrok/frontend:latest
          name: front-end
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
