microservices/kube/front-end-tcp-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.service.group: ia
    kompose.service.type: LoadBalancer
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: front-end-tcp
  name: front-end-tcp
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    io.kompose.service: front-end
  type: LoadBalancer
status:
  loadBalancer: {}
