microservices/kube/nakup-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.service.group: ia
    kompose.service.type: NodePort
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: nakup
  name: nakup
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: nakup
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.service.group: ia
        kompose.service.type: NodePort
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.service: nakup
    spec:
      containers:
        - env:
            - name: MONGO_IP
              value: mongo
          image: ghcr.io/kukovecrok/nakup:latest
          name: nakup
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
